# miniWeather

./: typescript.txt
cpp/: CMakeLists.txt  avec_timer.c  const.h  fmain.F90  jm_mpi_parallelfor.cpp  miniWeather_mpi_parallelfor.cpp  nepwrap.F90  reader.F90
